# mycel

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: MANUAL.md  RESEARCH.md  SPEC.md
site/: index.html  main.css  og.html
site/js/: fed.js  instruments.js  main.js  mycelium2d.js  mycelium3d.js  scene.js  scroll.js  site.js  terminal.js
src/: admin.rs  api.rs  bootstrap.rs  config.rs  crawl.rs  db.rs  extract.rs  index.rs  main.rs  rank.rs  search.rs  sitemap.rs  urlnorm.rs  warc.rs
src/net/: endpoint.rs  mod.rs  proto.rs  sync.rs
src/search/: fanout.rs
tests/: admin_ui.rs  federation.rs  fixture_crawl.rs
tests/golden/: queries.toml
